--- a/YMAPP/YMAPP/Views/ListNewsPage.xaml
+++ b/YMAPP/YMAPP/Views/ListNewsPage.xaml
@@ -39,18 +39,23 @@
                                         Text="{Binding Author}"
                                         TextColor="#336699"
                                         TextDecorations="Underline" />
-
-                                    <Grid>
-                                        <Grid.ColumnDefinitions>
-                                            <ColumnDefinition Width="50" />
-                                            <ColumnDefinition Width="*" />
-                                        </Grid.ColumnDefinitions>
-                                    </Grid>
-                                    <Image
+                                    <Frame
+                                        BorderColor="#336699"
+                                        CornerRadius="0"
+                                        HeightRequest="300"
                                         HorizontalOptions="Center"
-                                        Source="{Binding Image}"
-                                        VerticalOptions="Start"
-                                        WidthRequest="100" />
+                                        IsClippedToBounds="True"
+                                        VerticalOptions="Center"
+                                        WidthRequest="350">
+                                        <Image
+                                            Margin="-20"
+                                            Aspect="AspectFill"
+                                            HeightRequest="350"
+                                            HorizontalOptions="Fill"
+                                            Source="{Binding Image}"
+                                            VerticalOptions="Start"
+                                            WidthRequest="350" />
+                                    </Frame>
                                     <Label
                                         FontSize="Body"
                                         LineBreakMode="WordWrap"
