--- a/YMAPP/YMAPP/Views/ItemNewsPage.xaml
+++ b/YMAPP/YMAPP/Views/ItemNewsPage.xaml
@@ -4,8 +4,16 @@
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
     <ContentPage.Content>
-
         <StackLayout>
+            <Label
+                Padding="15,10,15,10"
+                BackgroundColor="#336699"
+                FontAttributes="Bold"
+                FontSize="Large"
+                HorizontalTextAlignment="Center"
+                Text="{Binding Name}"
+                TextColor="White"
+                TextTransform="Uppercase" />
             <WebView x:Name="webView" VerticalOptions="FillAndExpand">
                 <WebView.Source>
                     <HtmlWebViewSource Html="{Binding FullTextHtml}" />
